fix my refactor